# python_basic

./: .gitignore  README.md
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
